# agiros-tools

./: AGIROS_TOOLS_GUIDE.md  README.md  agiros_oob_builder_procedural.py  agiros_tools_menu.py  clean_generated.py  git_build_any.py  install_deps.sh  oob_tracks_to_sources.py  rpmbuild_any.py  yaml_git_downloader_release.py
agiros-tools/: README.md  pyproject.toml  requirements.txt
colcon-debian-packager/: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  rustfmt.toml
colcon-debian-packager/.github/workflows/: ci.yml
colcon-debian-packager/crates/colcon-deb-build/: Cargo.toml  README.md
colcon-debian-packager/crates/colcon-deb-build/benches/: orchestration_bench.rs
colcon-debian-packager/crates/colcon-deb-build/examples/: build_with_progress.rs  error_handling_example.rs  progress_example.rs  simple_build.rs
colcon-debian-packager/crates/colcon-deb-build/src/: artifact.rs  context.rs  error.rs  executor.rs  graceful_shutdown.rs  lib.rs  orchestrator.rs  progress_ui.rs  recovery.rs
colcon-debian-packager/crates/colcon-deb-build/tests/: integration_test.rs  orchestration_test.rs  progress_ui_test.rs  recovery_test.rs
colcon-debian-packager/crates/colcon-deb-cli/: Cargo.toml
colcon-debian-packager/crates/colcon-deb-cli/src/: main.rs
colcon-debian-packager/crates/colcon-deb-cli/src/commands/: build.rs  clean.rs  init.rs  mod.rs  validate.rs
colcon-debian-packager/crates/colcon-deb-config/: Cargo.toml
colcon-debian-packager/crates/colcon-deb-config/src/: lib.rs
colcon-debian-packager/crates/colcon-deb-core/: Cargo.toml
colcon-debian-packager/crates/colcon-deb-core/src/: build.rs  dependency.rs  error.rs  lib.rs  package.rs
colcon-debian-packager/crates/colcon-deb-debian/: Cargo.toml
colcon-debian-packager/crates/colcon-deb-debian/src/: dependency.rs  error.rs  lib.rs  manager.rs  repository.rs  validation.rs  version.rs
colcon-debian-packager/crates/colcon-deb-docker/: Cargo.toml
colcon-debian-packager/crates/colcon-deb-docker/examples/: progress_monitoring.rs
colcon-debian-packager/crates/colcon-deb-docker/src/: arch.rs  client.rs  container.rs  error.rs  image.rs  lib.rs  progress.rs  service.rs  types.rs
colcon-debian-packager/crates/colcon-deb-ros/: Cargo.toml
colcon-debian-packager/crates/colcon-deb-ros/benches/: scanner_bench.rs
colcon-debian-packager/crates/colcon-deb-ros/src/: lib.rs  package_xml.rs  parser.rs  scanner.rs
colcon-debian-packager/crates/colcon-deb-ros/tests/: integration_tests.rs  parallel_build_test.rs  parser_test.rs  performance_test.rs  scanner_test.rs
colcon-debian-packager/doc/: ARCH.md  DESIGN.md  DESIGN_BUILD.md  DESIGN_DEBIAN.md  DESIGN_DOCKER.md  DESIGN_HELPER.md  DESIGN_ROS.md  DEV.md  ROADMAP.md
colcon-debian-packager/docker/: .gitignore  README.md  build-images.sh  docker-compose.yml  run-colcon-deb.sh  test-docker-env.sh  test-multiarch.sh
colcon-debian-packager/docker/base/: Dockerfile  Dockerfile.fast
colcon-debian-packager/docker/scripts/: entrypoint.sh  inject-helpers.sh  install-rust-script.sh  setup-environment.sh
colcon-debian-packager/scripts/: create-repo.sh  entrypoint.sh  main.sh
colcon-debian-packager/scripts/helpers/: README.md  build-orchestrator.rs  check-requirements.rs  debian-preparer.rs  package-scanner.rs  progress-reporter.rs  scanner.rs
colcon-debian-packager/test_workspace/src/edge_cases/: package.xml
colcon-debian-packager/test_workspace/src/ignored_package/: package.xml
colcon-debian-packager/test_workspace/src/python_node/: package.xml  setup.cfg  setup.py
colcon-debian-packager/test_workspace/src/python_node/python_node/: publisher_node.py
colcon-debian-packager/test_workspace/src/simple_publisher/: CMakeLists.txt  package.xml
colcon-debian-packager/test_workspace/src/simple_publisher/src/: publisher_node.cpp
colcon-debian-packager/test_workspace/src/simple_subscriber/: CMakeLists.txt  package.xml
colcon-debian-packager/test_workspace/src/simple_subscriber/src/: subscriber_node.cpp
colcon-debian-packager/tests/e2e/: .gitignore  README.md  benchmark.sh  run-e2e-tests.sh  test-apt-repo.sh  test-ros-packages.sh  test-summary.md
colcon-debian-packager/tests/test_workspace/src/python_node/: package.xml  setup.py
colcon-debian-packager/tests/test_workspace/src/simple_publisher/: CMakeLists.txt  package.xml
colcon-debian-packager/tests/test_workspace/src/simple_publisher/src/: publisher.cpp
colcon-debian-packager/tests/test_workspace/src/simple_subscriber/: package.xml
