[package]
name = "colcon-deb-debian"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Debian packaging for Colcon Debian Packager"

[dependencies]
colcon-deb-core = { path = "../colcon-deb-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
md5 = "0.7"
sha1_smol = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = { workspace = true }