<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_publisher</name>
  <version>0.1.0</version>
  <description>A simple ROS 2 publisher node example</description>
  
  <maintainer email="maintainer@example.com">Test Maintainer</maintainer>
  <author email="author@example.com">Test Author</author>
  
  <license>Apache-2.0</license>
  
  <url type="website">https://example.com/simple_publisher</url>
  <url type="repository">https://github.com/example/simple_publisher</url>
  <url type="bugtracker">https://github.com/example/simple_publisher/issues</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>