<?xml version="1.0"?>
<package format="3">
  <name>simple_publisher</name>
  <version>0.1.0</version>
  <description>A simple ROS 2 publisher example</description>
  
  <maintainer email="maintainer@example.com">Test Maintainer</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>